--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Webdeveloper Nanodegree Yala
+  uni: Udacity University
+  year: June, 2014 &mdash; January, 2001
   # awards:
-  # summary:
+  summary: such a great degree
